fixed right white bar problem on small devices

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-body{
+html,body{
+    width: 100%;
+    height: 100%;
     margin: 0px;
-    border: 0px;
     padding: 0px;
-    overflow-x: hidden;
-    min-width: 100px;
+    overflow-x: hidden; 
 }
 .header{
     display: flex;
@@ -53,7 +53,7 @@ section{
 section>div{
     display: flex;
     width: 30%;
-    min-width: 320px;
+    min-width: 300px;
     max-width: 1320px;
     margin: 1em;
     padding: none;
